[package]
edition = "2021"
name = "pynk_pynk"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.12.2", default-features = false, features = ["full"] }
napi-derive = "2.12.2"
arti-client = { version = "=0.31", default-features = false, features = [
    "bridge-client",
    "onion-service-client",
    "onion-service-service",
    "geoip",
    "rustls",
    "tokio",
    "experimental-api",
] }
tor-rtcompat = { version = "0.31", features = ["tokio", "rustls"] }
tor-config = "=0.31.0"
tor-hsservice = "=0.31.0"
tor-dirmgr = "=0.31.0"
tor-netdir = "=0.31.0"
tor-cell = "=0.31.0"
tor-keymgr = "=0.31.0"
tor-hscrypto = "=0.31.0"
tor-llcrypto = "=0.31.0"
tor-proto = "=0.31.0"
futures-core = "=0.3.31"
futures-util = "=0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-util = "=0.7.15"
tokio-native-tls = "0.3.1"
native-tls = "0.2.14"
ed25519-dalek = "=2.1.1"
data-encoding = "2.9.0"
rand_core = "0.6.4"
sha3 = "0.10.8"

[build-dependencies]
napi-build = "2.0.1"

[dependencies.rusqlite]
version = "^0.32.1"
features = ["bundled"]

[profile.release]
lto = true
strip = "symbols"
